<resources>
    <string name="app_name">Greetings</string>
    <string name="greetings">GREETINGS!</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="message">MESSAGE</string>
    <string name="create">CREATE CARD</string>
    <string name="your_name">Your Name</string>
    <string name="friend_s_name">Friend\'s Name</string>
    <string name="heading">HEADING</string>
    <string name="enter_text">Enter Text</string>
    <string name="write_message">Write message</string>
</resources>
