<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFF7DA"
   >

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#FFF7DA"
    android:padding="20dp">

    <TextView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/greetings"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/from"
        style="@style/font"
        />

    <EditText
        android:id="@+id/from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/font"
        android:hint="@string/your_name"
        android:inputType="text" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/to"
        style="@style/font"
        />

    <EditText
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/friend_s_name"
        style="@style/font"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/heading"
        style="@style/font"
        />

    <EditText
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:hint="@string/enter_text"
       style="@style/font"
        />

    <TextView
        style="@style/font"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/message" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_message"
      style="@style/font"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/create"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_orange_light"
        />

</LinearLayout>
</ScrollView>